test/simple/correct/Tuple.hs
module Tuple where

main :: Int
main = snd ('1',2)
