test/simple/typeerrors/Examples/ExprTuple.hs
module ExprTuple where

f :: Int
f = ( "aapje" , "schaapje" ) 
